--- a/project.cfg
+++ b/project.cfg
@@ -5,3 +5,4 @@ executable : pemfc-exec
 
 [dependencies]
 Trust_Fixes: ./Trust_Fixes
+Schema_Euler_Implicite_Stationnaire: ./Schema_Euler_Implicite_Stationnaire
